Custom--app/main/default/objects/Status_Tags__c/fields/TLS_Prior_Lease_Submitted_for_Underwriti__c.field-meta.xml
<CustomField>
    <fullName>TLS_Prior_Lease_Submitted_for_Underwriti__c</fullName>
    <defaultValue>"Prior Lease Submitted for Underwriting"</defaultValue>
    <label>TLS Prior Lease Submitted for Underwriti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>