Custom--app/main/default/objects/Status_Tags__c/fields/TLS_TIP_Lease_Negotiations_Aborted__c.field-meta.xml
<CustomField>
    <fullName>TLS_TIP_Lease_Negotiations_Aborted__c</fullName>
    <defaultValue>"TIP Leasing Negotiations Aborted"</defaultValue>
    <label>TLS TIP Lease Negotiations Aborted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>