Custom--app/main/default/objects/Status_Tags__c/fields/TLS_TIP_Lease_Signed__c.field-meta.xml
<CustomField>
    <fullName>TLS_TIP_Lease_Signed__c</fullName>
    <defaultValue>"TIP Lease Signed"</defaultValue>
    <label>TLS TIP Lease Signed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>