Custom--app/main/default/objects/Status_Tags__c/fields/Underwriting_Approved__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Approved__c</fullName>
    <defaultValue>"Underwriting Approved"</defaultValue>
    <label>Underwriting Approved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>