Custom--app/main/default/objects/Status_Tags__c/fields/Vacant__c.field-meta.xml
<CustomField>
    <fullName>Vacant__c</fullName>
    <defaultValue>"Vacant"</defaultValue>
    <label>Vacant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>