Custom--app/main/default/objects/Status_Tags__c/fields/Waiting_for_Deed__c.field-meta.xml
<CustomField>
    <fullName>Waiting_for_Deed__c</fullName>
    <defaultValue>"Waiting for Deed"</defaultValue>
    <label>Waiting for Deed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>