Custom--app/main/default/objects/Status_Tags__c/fields/X2nd_Notice_Left__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Notice_Left__c</fullName>
    <defaultValue>"2nd Notice Left"</defaultValue>
    <label>2nd Notice Left</label>
    <length>255</length>
    <type>Text</type>
</CustomField>