Custom--app/main/default/objects/Status_Tags__c/fields/X3rd_Notice_Left__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Notice_Left__c</fullName>
    <defaultValue>"3rd Notice Left"</defaultValue>
    <label>3rd Notice Left</label>
    <length>255</length>
    <type>Text</type>
</CustomField>